# django-geo-spaas

./: .dockerignore  .gitignore  .readthedocs.yml  .travis.yml  Dockerfile  MANIFEST.in  README.md  Vagrantfile  build_container.sh  init_project.sh  manage.py  packages.json  process.py  pyproject.toml  runtests.py  setdjango.py  setup.py
.github/workflows/: ci.yml  tests_build.yml
cat/: urls.py  utils.py
cat/migrations/: 0001_initial.py
cat/models/: __init__.py  image.py  models.py
cat/tests/: tests.py
djangosat/: manage.py  process.py
djangosat/djangosat/: settings.py  wsgi.py
docs/: Makefile  conf.py  django_settings.py  environment.yml  index.rst
docs/source/: ecosystem.rst  extending.rst  geospaas.base_viewer.rst  geospaas.catalog.management.commands.rst  geospaas.catalog.management.rst  geospaas.catalog.migrations.rst  geospaas.catalog.rst  geospaas.export_DIF.migrations.rst  geospaas.export_DIF.rst  (+18 more)
geospaas/: tests.py  urls.py  utils.py
nansatcat/: forms.py  views.py
nansatproc/: admin.py  urls.py
nansencloud/: databases.py  databases_postgis.py  settings.py  urls.py  utils.py  wsgi.py
noaa_ndbc/: managers.py  models.py
proc/: forms.py  models.py  tests.py  urls.py  utils.py  views.py
provisioning/: conda_env_requirements.yml  galaxy_requirements.yml  hosts  site.retry  site.yml
scripts/: docker_push.sh
test_geospaas/: settings.py
test_nansencloud/: runtests.py  settings.py
tests/: settings.py  test_settings.py  testgeojson.json  urls.py
vagrant/: Vagrantfile  django.sh  gdal.sh  libkml.sh  openjpeg.sh  science.sh  utils.sh
(+344 files in other folders)
