[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "django-geo-spaas"
description = "Tools to manage geospatial datasets"
readme = "README.md"
authors = [
    {name = "Morten W. Hansen"},
    {name = "Anton A. Korosov", email="anton.korosov@nersc.no"},
    {name = "Artem Moiseev"},
    {name = "Jeong-Won Park"},
    {name = "Adrien Perrin"},
    {name = "Arash Azamifard"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Utilities",
]
dependencies = [
    "django-forms-bootstrap",
    "django-leaflet",
    "django<4",
    "gdal",
    "nansat",
    "netCDF4",
    "pythesint",
]
urls = {Repository = "https://github.com/nansencenter/django-geo-spaas"}
dynamic = ["version"]

[tool.setuptools]
packages = ["geospaas"]